[project]
name = "csv-to-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "csv-to-render",
    "ipykernel>=6.29.5",
    "polars>=1.27.1",
]

[tool.uv.sources]
csv-to-render = { workspace = true }
